--- a/style.css
+++ b/style.css
@@ -1,27 +1,51 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+div:has(table) {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #cf1f34;
+  color: rgb(8, 8, 66);
+  font-weight: bold;
+}
 table {
-      border-collapse: collapse;
-      margin-top: 20px;
-      width: 100%;
-    }
-    th, td {
-      border: 1px solid black;
-      padding: 8px;
-    }
-    th {
-      background-color: #eee;
-    }
+  border-collapse: collapse;
+  margin-top: 20px;
+  margin: 0 !important;
+  width: 100%;
+}
+th,
+td {
+  border: 1px solid black;
+  padding: 8px;
+}
+th {
+  background-color: gray;
+  color: rgb(8, 8, 66);
+  font-weight: bold;
+}
 
-  h1, h3 {
-    text-align: center;
-  }
+h1,
+h3,
+h4 {
+  text-align: center;
+  color: white;
+}
 
 body {
-    background-image: url("imgs/Background2.webp");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  background-image: url("imgs/Background2.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .table {
-    background-color: lightgray
+  background-color: lightgray;
 }
